<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:clickable="true"
    android:focusableInTouchMode="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusableInTouchMode="true">

        <ImageView
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:id="@+id/minus_btn"
            android:src="@drawable/ic_remove_circle_outline_black_24dp"
            android:layout_gravity="center" />

        <TextView
            android:text="TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/item_title"
            android:layout_weight="8"
            tools:text="Test"
            android:layout_gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textAlignment="center" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="0"
            android:id="@+id/count_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        <ImageView
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:id="@+id/plus_btn"
            android:src="@drawable/ic_add_circle_outline_black_24dp"
            android:layout_gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/item_line_toolbar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginBottom="-40dp"
        android:visibility="gone"
        >

        <ImageView
            android:id="@+id/edit_item"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/ic_mode_edit_black_24dp"/>

        <ImageView
            android:id="@+id/delete_item"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/ic_delete"/>
    </LinearLayout>

</LinearLayout>