...
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/content_frame"/>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_add_item"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_margin="16dp"
                android:src="@drawable/ic_add"
                app:fabSize="normal"
                app:layout_anchor="@id/content_frame"
...
